package com.orderservice.utils;

public class Constants {
	
	public final static String CONSUMER_PROP_PREFIX_NAME = "order.kafka.producer";
	public final static String ORDER_CREATED_TOPIC = "ORDER_STATUS";
	public final static String ORDER_PAYMENT_TOPIC = "PAYMENT_STATUS";
	public final static String ORDER_RESTAURANT_TOPIC = "RESTAURANT_STATUS";
	public final static String ORDER_DELIVERY_TOPIC = "DELIVERY_STATUS";
	public final static String PAYMENT_PROP_PREFIX_NAME = "payment.service";
}
