package com.example.paymentservice.utils;

public class DatabaseConstants {
	
	public static final String PAYMENT_STATUS = "payment_status_details";
}
